# edgar

./: .gitignore  Taskfile.yml  pyproject.toml  usage.md
docs/: control_flow.md  readme.md  robot_arm.md  stack.md  todo.md
edgar/: __init__.py  arm.py  arm_calibration.py  board_vision.py  camera.py  cli.py
