[project]
name = "edgar"
version = "0.1.0"
description = "Robot that plays Go on a physical board"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "opencv-python>=4.9",
]

[project.scripts]
edgar-arm = "edgar.cli:main"
edgar-cam = "edgar.camera:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edgar"]
